# llvm-project

flang/: CMakeLists.txt
flang/include/flang/: ISO_Fortran_binding.h
flang/include/flang/Common/: Fortran-features.h
flang/include/flang/Parser/: dump-parse-tree.h  parse-tree.h
flang/include/flang/Runtime/: allocatable-cuf.h  descriptor.h
flang/include/flang/Semantics/: symbol.h
flang/lib/Lower/: OpenACC.cpp
flang/lib/Optimizer/CodeGen/: CodeGen.cpp  TypeConverter.cpp
flang/lib/Optimizer/Dialect/: FIRType.cpp
flang/lib/Optimizer/Transforms/: CMakeLists.txt  CUFAddConstructor.cpp  CUFLegalizeRegion.cpp  CufOpConversion.cpp
flang/lib/Parser/: CMakeLists.txt  openacc-parsers.cpp  program-parsers.cpp  stmt-parser.h  unparse.cpp
flang/lib/Semantics/: CMakeLists.txt  canonicalize-acc.cpp  check-acc-structure.cpp  check-acc-structure.h  check-omp-structure.cpp  resolve-names.cpp  semantics.cpp
flang/module/: openacc.f90
flang/runtime/: CMakeLists.txt  ISO_Fortran_binding.cpp  ISO_Fortran_util.h  allocatable-cuf.cpp  allocator-registry.cpp  allocator-registry.h  derived-api.cpp  descriptor.cpp  type-info.cpp
flang/runtime/CUDA/: CMakeLists.txt  allocator.cpp  module-registry.cpp  registration.cpp
flang/test/Fir/: box.fir  convert-to-llvm.fir  cuf-invalid.fir  embox-char.fir  embox.fir  ignore-missing-type-descriptor.fir  polymorphic.fir  rebox-global.fir  rebox.fir  tbaa.fir  type-descriptor.fir
flang/test/Fir/CUDA/: cuda-legalize-region.mlir  cuda-registration.fir  cuf-allocate.fir
flang/test/Lower/: allocatable-polymorphic.f90
flang/test/Semantics/: acc-branch.f90  acc-clause-validity.f90  acc-resolve01.f90  acc-resolve02.f90  acc-symbols01.f90  test_symbols.sh
flang/test/Semantics/OpenACC/: acc-data.f90
flang/tools/f18/: CMakeLists.txt  f18.cpp
flang/tools/fir-opt/: CMakeLists.txt  FirOptMain.cpp  fir-opt.cpp
flang/unittests/Evaluate/: ISO-Fortran-binding.cpp
flang/unittests/Runtime/CUDA/: AllocatableCUF.cpp  AllocatorCUF.cpp  CMakeLists.txt
llvm/examples/LLJITExamples/LLJITWithLazyReexports/: LLJITWithLazyReexports.cpp
llvm/include/llvm/TableGen/: DirectiveEmitter.h
llvm/test/TableGen/: directive1.td  directive2.td  directive3.td
llvm/utils/TableGen/: DirectiveEmitter.cpp  TableGen.cpp
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/OpenACC/: CMakeLists.txt  OpenACCToGPU.cpp  OpenACCToGPU.td  OpenACCToGPUPass.cpp  OpenACCToSeqPass.cpp  OpenACCToTargetPass.cpp
mlir/lib/Conversion/OpenACCToGPU/: CMakeLists.txt  ConvertOpenACCToGPU.cpp  ConvertOpenACCToTarget.cpp
mlir/lib/Conversion/OpenACCToStandard/: CMakeLists.txt  ConvertOpenACCToStandard.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/OpenACC/: CMakeLists.txt  DialectRegistration.cpp  OpenACC.cpp
mlir/lib/Dialect/OpenACC/IR/: OpenACC.cpp
mlir/lib/ExecutionEngine/: RunnerUtils.cpp
mlir/lib/Support/: JitRunner.cpp
mlir/test/mlir-cpu-runner/: mlir_runner_utils.cpp
mlir/tools/mlir-cuda-runner/: CMakeLists.txt  cuda-runtime-wrappers.cpp
mlir/tools/mlir-opt/: CMakeLists.txt
mlir/tools/mlir-tblgen/: DirectiveCommonGen.cpp
(+39 files in other folders)
