add_mlir_dialect_library(MLIROpenACC
  IR/OpenACC.cpp
  
  ADDITIONAL_HEADER_DIRS
  ${MLIR_MAIN_INCLUDE_DIR}/mlir/Dialect/OpenACC
)
add_dependencies(MLIROpenACC
  MLIROpenACCIncGen
  MLIRIR
  MLIRLLVMIR
  MLIRSupport
  MLIRTransformUtils
  LLVMSupport
)
target_link_libraries(MLIROpenACC 
  MLIRIR
  MLIRLLVMIR
  MLIRSupport
  MLIRTransformUtils
  LLVMSupport
)